--- a/templates/backOffice/default/module_configuration.html
+++ b/templates/backOffice/default/module_configuration.html
@@ -460,7 +460,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-default" data-dismiss="modal">{intl l="Cancel"}</button>
-                                        <button type="submit" type="button" class="btn btn-primary js-action-delete-confirm">{intl l="Update"}</button>
+                                        <button type="submit" type="button" class="btn btn-primary js-action-delete-confirm">{intl l="Export"}</button>
                                     </div>
                                 </div>
                             </form>
